--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
         // Valentine messages for "NO" button
         const valentineMessages = [
             "kamu salah pencet kahh??",
-            "kamu ga sayang aku ayy :(",
+            "kamu ga sayang aku :(",
             "pls pencet iyaa ihh",
             "pls sayanggg",
             "ydh aku mrh",
@@ -1274,7 +1274,7 @@
             
             // Reset valentine content ke state awal dengan inline style untuk warna hitam
             valentineContent.innerHTML = `
-                <div class="question">do u love me..??</div>
+                <div class="question">kamu sayang aku ga..?</div>
                 
                 <!-- Gambar di tengah seperti page 2 -->
                 <div class="heart-icon3">
@@ -1296,7 +1296,7 @@
                                    height: 60px;
                                    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
                                    transition: all 0.3s ease;">
-                        YES
+                        iya
                     </button>
                     <button class="valentine-button" id="valentineNo" 
                             style="background: #272b6a; 
@@ -1310,7 +1310,7 @@
                                    height: 60px;
                                    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.4);
                                    transition: all 0.3s ease;">
-                        NO
+                        ga
                     </button>
                 </div>
             `;
