--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
                 Terima kasih udah jadi cowok yang bisa bikin aku deg-degan cuma gara-gara suara kamu.
                 Selamat ulang tahun, sayaaangggku! 😗🥳💋<br><br>
 
-                Jangan jauh-jauh yaa 🥺 aku gampang kangen, nanti manja ke kamu lagi 😼💕
+                Jangan jauh-jauh yaa 🥺 aku gampang kangen, pokoknya aku mau di manja manja terus 😼💕
             </div>
             
             <div class="signature">- your gf &lt;3</div>
@@ -1546,3 +1546,4 @@
     </script>
 </body>
 </html>
+
